More library component updates.
hidapi to 0.11.0.
OpenSSL to 1.1.1l.
curl to 7.79.1.
MySQL client library to 3.2.4.
gdbm to 1.21.


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19976 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -46,7 +46,7 @@ LIBUSB_URL	= $(LIBUSB_SERVER)/$(LIBUSB_TARBALL)
 LIBUSB_DIST	= $(TEMP)/$(LIBUSB_TARBALL)
 
 HIDAPI_NAME	= hidapi
-HIDAPI_VER	= 0.10.1
+HIDAPI_VER	= 0.11.0
 HIDAPI_SRC	= hidapi-$(HIDAPI_NAME)-$(HIDAPI_VER)
 HIDAPI_TARBALL	= $(HIDAPI_NAME)-$(HIDAPI_VER).tar.gz
 HIDAPI_SERVER	= https://github.com/libusb/hidapi/archive
@@ -54,7 +54,7 @@ HIDAPI_URL	= $(HIDAPI_SERVER)/$(HIDAPI_TARBALL)
 HIDAPI_DIST	= $(TEMP)/$(HIDAPI_TARBALL)
 
 OPENSSL_NAME	= openssl
-OPENSSL_VER	= 1.1.1k
+OPENSSL_VER	= 1.1.1l
 OPENSSL_SRC	= $(OPENSSL_NAME)-$(OPENSSL_VER)
 OPENSSL_TARBALL	= $(OPENSSL_SRC).tar.gz
 OPENSSL_SERVER	= http://www.openssl.org/source
@@ -71,7 +71,7 @@ ZLIB_URL	= $(ZLIB_SERVER)/$(ZLIB_TARBALL)
 ZLIB_DIST	= $(TEMP)/$(ZLIB_TARBALL)
 
 CURL_NAME	= curl
-CURL_VER	= 7.78.0
+CURL_VER	= 7.79.1
 CURL_SRC	= $(CURL_NAME)-$(CURL_VER)
 CURL_TARBALL	= $(CURL_NAME)-$(CURL_VER).tar.gz
 CURL_SERVER	= http://curl.se/download
@@ -120,7 +120,7 @@ LIBSODIUM_URL	= $(LIBSODIUM_SERVER)/$(LIBSODIUM_TARBALL)
 LIBSODIUM_DIST	= $(TEMP)/$(LIBSODIUM_TARBALL)
 
 LIBMYSQLCLIENT_NAME	= mariadb-connector-c
-LIBMYSQLCLIENT_VER	= 3.2.3
+LIBMYSQLCLIENT_VER	= 3.2.4
 LIBMYSQLCLIENT_SRC	= $(LIBMYSQLCLIENT_NAME)-$(LIBMYSQLCLIENT_VER)-src
 LIBMYSQLCLIENT_TARBALL	= $(LIBMYSQLCLIENT_NAME)-$(LIBMYSQLCLIENT_VER)-src.tar.gz
 LIBMYSQLCLIENT_SERVER	= https://downloads.mariadb.com/Connectors/c/connector-c-$(LIBMYSQLCLIENT_VER)
@@ -128,7 +128,7 @@ LIBMYSQLCLIENT_URL	= $(LIBMYSQLCLIENT_SERVER)/$(LIBMYSQLCLIENT_TARBALL)
 LIBMYSQLCLIENT_DIST	= $(TEMP)/$(LIBMYSQLCLIENT_TARBALL)
 
 GDBM_NAME	= gdbm
-GDBM_VER	= 1.20
+GDBM_VER	= 1.21
 GDBM_SRC	= $(GDBM_NAME)-$(GDBM_VER)
 GDBM_TARBALL	= $(GDBM_NAME)-$(GDBM_VER).tar.gz
 GDBM_SERVER	= http://ftp.gnu.org/pub/gnu/gdbm
