Upgraded the Raspberry Pi kernel to 5.10.63 Kernel.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@19977 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/RaspberryPi2Gadget.config
+++ b/bootkernel/kernel/RaspberryPi2Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.10.52 Kernel Configuration
+# Linux/arm 5.10.63 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -1939,6 +1939,7 @@ CONFIG_VIDEO_IMX290=m
 CONFIG_VIDEO_IMX477=m
 CONFIG_VIDEO_IMX319=m
 CONFIG_VIDEO_IMX355=m
+# CONFIG_VIDEO_IMX519 is not set
 CONFIG_VIDEO_OV2640=m
 CONFIG_VIDEO_OV2659=m
 CONFIG_VIDEO_OV2680=m
