--- a/bootkernel/kernel/RaspberryPi4Gadget.config
+++ b/bootkernel/kernel/RaspberryPi4Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.10.52 Kernel Configuration
+# Linux/arm64 5.10.63 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -2415,6 +2415,7 @@ CONFIG_VIDEO_IMX290=m
 CONFIG_VIDEO_IMX477=m
 CONFIG_VIDEO_IMX319=m
 CONFIG_VIDEO_IMX355=m
+# CONFIG_VIDEO_IMX519 is not set
 CONFIG_VIDEO_OV2640=m
 CONFIG_VIDEO_OV2659=m
 CONFIG_VIDEO_OV2680=m
