--- a/bootkernel/kernel/RaspberryPi1Gadget.config
+++ b/bootkernel/kernel/RaspberryPi1Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 5.10.63 Kernel Configuration
+# Linux/arm 5.10.75 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -1433,6 +1433,7 @@ CONFIG_GPIO_BCM_VIRT=y
 # CONFIG_GPIO_MB86S7X is not set
 # CONFIG_GPIO_MPC8XXX is not set
 # CONFIG_GPIO_PL061 is not set
+CONFIG_GPIO_PWM=y
 # CONFIG_GPIO_SAMA5D2_PIOBU is not set
 # CONFIG_GPIO_SIFIVE is not set
 # CONFIG_GPIO_SYSCON is not set
@@ -2700,6 +2701,7 @@ CONFIG_VIDEO_RPIVID=m
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_UNISYSSPAR is not set
+# CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 # CONFIG_FB_TFT is not set
 # CONFIG_KS7010 is not set
 CONFIG_BCM_VIDEOCORE=m
