--- a/bootkernel/kernel/RaspberryPi4Gadget.config
+++ b/bootkernel/kernel/RaspberryPi4Gadget.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 5.10.63 Kernel Configuration
+# Linux/arm64 5.10.75 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (crosstool-NG 1.24.0) 8.3.0"
 CONFIG_CC_IS_GCC=y
@@ -1943,6 +1943,7 @@ CONFIG_GPIO_BCM_VIRT=y
 # CONFIG_GPIO_HLWD is not set
 # CONFIG_GPIO_MB86S7X is not set
 # CONFIG_GPIO_PL061 is not set
+CONFIG_GPIO_PWM=y
 # CONFIG_GPIO_SIFIVE is not set
 # CONFIG_GPIO_XGENE is not set
 # CONFIG_GPIO_XILINX is not set
@@ -3554,6 +3555,7 @@ CONFIG_VIDEO_RPIVID=m
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_UNISYSSPAR is not set
+# CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 # CONFIG_FB_TFT is not set
 # CONFIG_KS7010 is not set
 CONFIG_BCM_VIDEOCORE=m
