Moved symlink to aws.gpr from $(LIBDIR)/aws.gpr to /usr/$(CONFIGURE_NAME)/share/gpr
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20047 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -97,7 +97,8 @@ else
 	mkdir -p					$(PKGDIR)$(AWSDIR)/aws.src
 	install -cm 0644 src/*.ads src/*.adb		$(PKGDIR)$(AWSDIR)/aws.src
 	rm						$(PKGDIR)$(AWSDIR)/aws.src/with_everything.adb
-	ln -s aws/aws.gpr				$(PKGDIR)$(LIBDIR)/aws.gpr
+	mkdir -p					$(PKGDIR)/usr/$(CONFIGURE_NAME)/share/gpr
+	ln -s /usr/local/lib/$(CONFIGURE_NAME)/aws/aws.gpr $(PKGDIR)/usr/$(CONFIGURE_NAME)/share/gpr/aws.gpr
 endif
 	$(GAINROOT) chown -R root.root			$(PKGDIR)
 	$(GAINROOT) dpkg-deb -Zgzip --build		$(PKGDIR)
