Simplified the package build
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20058 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -99,11 +99,9 @@ else
 	mkdir -p					$(PKGDIR)/usr/$(CONFIGURE_NAME)/share/gpr
 	ln -s /usr/local/lib/$(CONFIGURE_NAME)/aws.gpr $(PKGDIR)/usr/$(CONFIGURE_NAME)/share/gpr/aws.gpr
 endif
-	$(GAINROOT) chown -R root.root			$(PKGDIR)
-	$(GAINROOT) chmod -R ugo-w			$(PKGDIR)
-	$(GAINROOT) dpkg-deb -Zgzip --build		$(PKGDIR)
-	$(GAINROOT) chown -R --reference=Makefile *.deb	$(PKGDIR)
-	$(GAINROOT) chmod -R u+w			$(PKGDIR)
+	chmod -R ugo-w					$(PKGDIR)/usr/*
+	fakeroot dpkg-deb --build			$(PKGDIR)
+	chmod -R ugo+w					$(PKGDIR)
 
 ###############################################################################
 
