Consolidated into a single Makefile
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20062 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/control
+++ b/toolchain/libsimpleio/control
@@ -4,5 +4,5 @@ Priority: extra
 Maintainer: Philip Munts <phil@munts.net>
 Architecture: @@ARCH@@
 Version: @@VERSION@@
-Description: GCC cross-toolchain Linux Simple I/O library for @@BOARDNAME@@
+Description: Linux Simple I/O library for @@TARGET@@
 Depends: munts-libsimpleio
