Fixed cut and paste error: Changed libaws to libsimpleio
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20065 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -30,14 +30,14 @@ MUNTSOS		?= $(HOME)/muntsos
 ifneq ($(BOARDNAME),)
 # Build with MuntsOS Embedded Linux cross-toolchain
 include ../../include/$(BOARDNAME).mk
-LIBNAME		:= gcc-$(TOOLCHAIN_NAME)-libaws
+LIBNAME		:= gcc-$(TOOLCHAIN_NAME)-libsimpleio
 GPRDIR		:= $(PKGDIR)$(GCCSYSROOT)/../../share/gpr
 LIBDIR		:= $(GCCSYSROOT)/usr/lib
 TARGET		:= $(BOARDBASE)
 else
 # Build with Debian cross-toolchain, selected by CROSS_COMPILE=
 CONFIGURE_NAME	:= $(shell echo $(CROSS_COMPILE) | rev | cut -c 2- | rev)
-LIBNAME		:= $(CONFIGURE_NAME)-libaws
+LIBNAME		:= $(CONFIGURE_NAME)-libsimpleio
 GPRDIR		:= /usr/$(CONFIGURE_NAME)/share/gpr
 LIBDIR		:= /usr/local/lib/$(CONFIGURE_NAME)
 TARGET	 	:= $(CONFIGURE_NAME)
