Fixed location for libsimpleio COPYING
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20138 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -476,7 +476,7 @@ endif
 	@echo ""						>>$@
 	@echo "**** libsimpleio:"				>>$@
 	@echo ""						>>$@
-	@cat $(GCCSYSROOT)/usr/share/libsimpleio/COPYING	>>$@
+	@cat /usr/local/share/libsimpleio/doc/COPYING		>>$@
 	@sed -i 's/\f//'					$@
 	@dos2unix						$@
 
